# slurm-code

./: .nojekyll  CHANGELOG.md  README.md  index.html  pyproject.toml  robots.txt  search.json  sitemap.xml
.github/workflows/: conda-release.yml
api/: functionname.html  index.html  scriptname.html
conda-build/: meta.yaml
docs/: README.md  _quarto.yml  objects.txt
docs/api/: functionname.qmd  index.qmd  scriptname.qmd
docs/pages/: cancel.md  getting-started.md  jobs.md  managing-jobs.md  overview.ipynb  profiles.md  reconnect.md  submit.md
pages/: cancel.html  example.html  getting-started.html  jobs.html  managing-jobs.html  overview.html  profiles.html  reconnect.html  submit.html
scripts/: rename.py
src/slurm_code/: __init__.py  cli.py  config.py  core.py
test/: test_modulename.py
